fix(views/analytics): Fix layout wrapping & margins

--- a/src/views/analytics/styles.scss
+++ b/src/views/analytics/styles.scss
@@ -7,25 +7,27 @@ $chart__height: 280px;
 @mixin card__width--100 {
   margin-right: 0;
   min-width: 450px;
-  width: calc(100%);
+  width: calc(100% - #{$card__margin-x});
 }
 
 @mixin card__width--50 {
-  width: calc(50% - #{0.5 * $card__margin-x});
+  width: calc(50% - #{$card__margin-x});
+  margin-right: $card__margin-x;
 }
 
 @mixin card__width--25 {
-  width: calc(25% - #{0.75 * $card__margin-x});
+  width: calc(25% - #{$card__margin-x});
+  margin-right: $card__margin-x;
 }
 
 .analytics-view__cards-container {
-  display: flex;
-  flex-wrap: wrap;
   margin-bottom: $card__margin-y;
   margin-top: -1 * $card__margin-y;
+  margin-right: -1 * $card__margin-x;
 }
 
 .analytics-view__card {
+  float: left;
   margin-top: $card__margin-y;
 
   .card__body {
